-----2.11.1 (2024) -----
Bug fixes:
	* Fix ODS support


-----2.11.0 (09.07.2024) -----
New features:
	* [general]
		* New application theme "Dracula"
		* New categorical color map "Dracula"
		* New option in the application settings to run a selected CAS engine at startup
		* New option in the application settings to control if the state of the dock widgets should be saved in the project file
		* Share the project via email, Nextcloud, etc. directly from the main menu
		* Allow to activate and deactivate the debug and performance tracing output in the terminal in the application settings
	* [worksheet]
		* Preview panel for all available worksheets in the project
		* Add possibility to use column labels as axis ticks
		* New visualization types:
			* Lollipop plot
			* Q-Q plot
			* KDE plot
		* Error bars for bar plots
		* New worksheet theme "Dracula"
		* Add possibility to lock elements for unintentional change in the plot
		* New panel in the presenter widget to allow the selection, zooming and navigation also in the presenter mode
		* Add possibility to limit the number of ticks for custom columns
		* Allow to show/hide the entry in the legend for all supported plot types and not only for XY-Curve
		* Add setting legend and text position relative to plot
		* Text alignment (left, center, right, block) in text labels
	* [spreadsheet]
		* Spreadsheet linking - allow to synchronize number of rows across multiple spreadsheets
		* Extended search and replace
		* Column statistics spreadsheet - child spreadsheet showing various statistical properties of the parent spreadsheet
		* Remove/mask rows with missing values
		* Allow to sort the whole spreadsheet even if one single column was selected, use it rather as the key sort column
		* When generating values via a function, allow to control whether the target spreadsheet should be resized to the size of the variable columns