@@ -1,7 +1,10 @@
 -----2.11.1 (2024) -----
 Bug fixes:
 	* Fix ODS support
-
+	* Fixed the initial positioninig of the docks, should be put besides each other and not below
+	* Don't try to restore the window size when starting for the first time, let the window manager do the initial size
+	* Don't crash when opening a project which a hidden spreadsheet view
+	* Fixed the background color of the sparklines in the spreadsheet
 
 -----2.11.0 (09.07.2024) -----
 New features:
